# sql-server-cli

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.yaml  install.sh
.githooks/: pre-push
.github/workflows/: ci.yml  homebrew-formula-verify.yml  release.yml  scoop-token-smoke.yml  sync-homebrew.yml  sync-scoop.yml  verify-release-channels.yml
.planning/: PROJECT.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/docs/: command-model-and-admin-workflows-spec.md
.planning/phases/01-discovery/: 01-01-PLAN.md  01-01-SUMMARY.md  DISCOVERY.md
.planning/phases/02-database-query/: 02-01-PLAN.md
assets/: GEMINI.md  SKILL.md.template  sscli-compare.1.md
scripts/: update_homebrew_formula_from_release.sh  update_scoop_manifest_from_release.sh
src/: app_settings.rs  error.rs  lib.rs  main.rs  update.rs
src/cli/: args.rs  mod.rs
src/commands/: backups.rs  columns.rs  common.rs  compare.rs  completions.rs  config.rs  databases.rs  describe.rs  foreign_keys.rs  help.rs  indexes.rs  init.rs  integrations.rs  mod.rs  object_lookup.rs  paging.rs  query_stats.rs  sessions.rs  sql.rs  sql_utils.rs  status.rs  stored_procs.rs  table_data.rs  tables.rs  update.rs  update_notice.rs
src/config/: env.rs  loader.rs  mod.rs  schema.rs
src/db/: client.rs  connection.rs  executor.rs  mod.rs  queries.rs  types.rs
src/output/: csv.rs  json.rs  mod.rs  table.rs
src/safety/: mod.rs  read_only.rs
tests/: config_command_test.rs  help_test.rs  init_command_test.rs  integration_commands_test.rs  integrations_test.rs  p2_commands_test.rs  sql_command_test.rs  update_command_test.rs
tests/common/: mod.rs
