[package]
name = "sscli"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "SQL Server CLI tool for database inspection"
license = "MIT"
repository = "https://github.com/jwcraig/sql-server-cli"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tiberius = { version = "0.12", default-features = false, features = ["rustls", "chrono"] }
tokio-util = { version = "0.7", features = ["compat"] }
clap = { version = "4.4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
comfy-table = "7.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
owo-colors = "4.0"
dirs = "5.0"
csv = "1.3"
dotenvy = "0.15.7"

[dev-dependencies]
tokio-test = "0.4"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"

[features]
default = ["tds73"]
tds73 = ["tiberius/tds73"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/sscli-{ target }.tar.gz"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/sscli-{ target }.zip"
pkg-fmt = "zip"
